<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/team_a"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/txt_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:text="@string/txt_team_a"/>

            <TextView
                    android:id="@+id/txt_team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="52sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="goal"
                    android:tag="@string/txt_team_a"
                    android:text="@string/btn_goal"/>

            <TextView
                    android:id="@+id/txt_team_a_free_kick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="freeKick"
                    android:tag="@string/txt_team_a"
                    android:text="@string/btn_free_kick"/>

            <TextView
                    android:id="@+id/txt_team_a_corner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="corner"
                    android:tag="@string/txt_team_a"
                    android:text="@string/btn_corner"/>

            <TextView
                    android:id="@+id/txt_team_a_penalty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="penalty"
                    android:tag="@string/txt_team_a"
                    android:text="@string/btn_penalty"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <ImageView
                    android:src="@drawable/team_b"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <TextView
                    android:id="@+id/txt_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:text="@string/txt_team_b"/>

            <TextView
                    android:id="@+id/txt_team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="52sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="goal"
                    android:tag="@string/txt_team_b"
                    android:text="@string/btn_goal"/>

            <TextView
                    android:id="@+id/txt_team_b_free_kick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="freeKick"
                    android:tag="@string/txt_team_b"
                    android:text="@string/btn_free_kick"/>

            <TextView
                    android:id="@+id/txt_team_b_corner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="corner"
                    android:tag="@string/txt_team_b"
                    android:text="@string/btn_corner"/>

            <TextView
                    android:id="@+id/txt_team_b_penalty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-light"
                    android:text="0"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="penalty"
                    android:tag="@string/txt_team_b"
                    android:text="@string/btn_penalty"/>
        </LinearLayout>
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="reset"
            android:text="Reset"/>
</RelativeLayout>
